# quaternion_calc

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  conanfile.txt
.github/workflows/: all_build.yml  cmake.yml
include/ast/: math.hpp  node.hpp
include/parser/: grammar.txt  parser.hpp
include/quaternion/: concepts.hpp  quaternion.hpp  vector3.hpp
src/: main.cpp
src/ast/: node.hpp
src/quaternion/: concepts.hpp  details.hpp  quaternion.hpp  vector3.hpp
tests/: common.hxx  empty.cxx  quaternion.cxx  vector3.cxx
tests/ast/: basic_nodes.cxx  math_nodes.cxx
tests/parser/: parser.cxx
tests/quaternions/: empty.cxx  quaternion.cxx  vector3.cxx
